# swarmchat

./: .claude-start.sh  .gitignore  .run-claude.sh  .start-dev.sh  HANDOFF_WINDOWS_AGENT.md  PHASE_1_PROGRESS.md  PHASE_2_PROGRESS.md  PHASE_3_PROGRESS.md  README.md  SwarmChat-Project-Plan-For-AI-Agent.md.md
docs-site/: BUILD_GUIDE.md  BUILD_GUIDE.zh.md  MANUAL_BUILD.md  README.md  downloads.html  downloads.zh.html  index.html  index.zh.html
docs-site/downloads/: openp2p_3.25.8_aarch64_cortex-a53.ipk
fab/project/: config.yaml
scp-cli/: README.md  go.mod  go.sum  main.go
scp-cli/client/: relay.go
scp-cli/cmd/: agent.go  group.go  identity.go  message.go  peer.go
scp-cli/config/: config.go
scp-core/: Cargo.toml  run_integration_tests.sh  simple_test.rs  test_integration.rs
scp-core/examples/: did_demo.rs  identity_demo.rs  peer_id_demo.rs  simple_chat.rs
scp-core/src/: lib.rs
scp-core/src/crypto/: double_ratchet.rs  mod.rs  sender_key.rs  x3dh.rs
scp-core/src/did/: mod.rs
scp-core/src/identity/: mod.rs
scp-core/src/identity_discovery/: mod.rs
scp-core/src/identity_manager/: mod.rs
scp-core/src/messaging/: envelope.rs  mod.rs  types.rs
scp-core/src/peer_id/: mod.rs
scp-core/src/transport/: behaviour.rs  config.rs  mod.rs  network.rs
scp-core/swarmchat/scp-core/: Cargo.toml  p0-6_status.md  status_report.txt  verify_double_ratchet.rs
scp-core/swarmchat/scp-core/examples/: crypto_integration.rs  double_ratchet.rs  integration_test.rs
scp-core/swarmchat/scp-core/src/: lib.rs
scp-core/swarmchat/scp-core/src/crypto/: double_ratchet.rs  mod.rs
scp-core/swarmchat/scp-core/tests/: crypto_integration.rs  double_ratchet_integration.rs
scp-core/tests/: crypto_integration.rs
scp-relay/: README.md  api.go  go.mod  go.sum  main.go
scp-relay/internal/prekey/: store.go
scp-relay/internal/storage/: store.go
scp-sdk-python/: README.md  pyproject.toml
scp-sdk-python/scp_sdk/: __init__.py  agent.py  client.py  decorators.py  types.py  webhook.py
scp-spec/: Swarm Communication Protocol (SCP) Specification v0.1.0.md
swarmchat/: App.tsx  CROSS_PLATFORM_PLAN.md  PHASE_0_COMPLETE.md  UPGRADE_RN076.md  WINDOWS_BUILD.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
swarmchat/android/: build.gradle  gradle.properties  local.properties  settings.gradle
swarmchat/android/app/: build.gradle  debug.keystore  proguard-rules.pro
swarmchat/android/app/src/main/: AndroidManifest.xml
swarmchat/android/app/src/main/java/com/swarmchat/: MainActivity.java  MainApplication.java  ScpCoreBridgeModule.java  ScpCoreBridgePackage.java
swarmchat/android/app/src/main/res/values/: styles.xml
swarmchat/ios/: Podfile
swarmchat/ios/SwarmChat/: Info.plist  ScpCoreBridge.h  ScpCoreBridge.m
swarmchat/rust/scp-core-bridge/: Cargo.toml
swarmchat/rust/scp-core-bridge/src/: lib.rs
swarmchat/scripts/: patch-rn074-compat.sh  patch-rn076-compat.sh
swarmchat/src/components/: ChatInput.tsx  ContactItem.tsx  GroupItem.tsx  LoadingOverlay.tsx  MessageBubble.tsx  QRCode.tsx
swarmchat/src/hooks/: useChat.ts  useContacts.ts  useIdentity.ts
swarmchat/src/navigation/: AppNavigator.tsx
swarmchat/src/screens/: AddFriendScreen.tsx  ChatScreen.tsx  ContactDetailScreen.tsx  ContactsScreen.tsx  CreateIdentityScreen.tsx  GroupChatScreen.tsx  GroupsScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  QRScanScreen.tsx  RecoverIdentityScreen.tsx  SettingsScreen.tsx  WelcomeScreen.tsx
swarmchat/src/services/: ChatService.ts  FileService.ts  GroupService.ts  IdentityService.ts  RelayService.ts  ScpCoreBridge.ts  StorageService.ts
swarmchat/src/store/: chatSlice.ts  contactsSlice.ts  groupSlice.ts  identitySlice.ts  index.ts  networkSlice.ts  settingsSlice.ts
swarmchat/src/types/: index.ts
swarmchat/src/utils/: constants.ts  crypto.ts  did.ts  qr.ts
swarmchat/windows/SwarmChat/: ScpCoreBridgeModule.cpp  ScpCoreBridgeModule.h
