[package]
name = "scp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# BIP39 mnemonic generation
bip39 = "1"

# Random number generation
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tempfile = "3"