[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scp-sdk"
version = "0.1.0"
description = "Swarm Communication Protocol (SCP) Python SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "SwarmChat Protocol Team"}
]
keywords = ["scp", "swarmchat", "p2p", "decentralized", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "flask>=3.0",
    "cryptography>=41.0",
    "pynacl>=1.5",
    "base58>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/swarmchat/scp-sdk-python"
Documentation = "https://docs.scp.io/python"
Repository = "https://github.com/swarmchat/scp-sdk-python"

[tool.setuptools.packages.find]
include = ["scp_sdk*"]
