[package]
name = "scp-core"
version = "0.1.0"
edition = "2021"
description = "Swarm Communication Protocol core library"
license = "Apache-2.0"
authors = ["SwarmChat Protocol Team"]
repository = "https://github.com/hucx9527/swarmchat"

[dependencies]
# 加密原语
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["reusable_secrets"] }
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"

# BIP39 助记词
bip39 = { version = "2.1", features = ["rand_core"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
ciborium = "0.2"

# 多格式编码
multibase = "0.9"
multihash = "0.18"
multicodec = "0.6"

# 工具库
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
ulid = "1.1"
bytes = "1.5"

# 测试依赖
[dev-dependencies]
proptest = "1.4"
hex-literal = "0.4"

[features]
default = []
wasm = ["getrandom/js"]